<resources>
    <string name="app_name">Mangapid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_comic">Search Comic</string>
    <string name="language">Language</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="popular">Popular Comic</string>
    <string name="title">Title</string>
    <string name="chapter"><u><i>Chapter</i></u></string>
    <string name="info">Info</string>
    <string name="chapter_read">Chapter Read</string>
    <string name="mangapid">Mangapid</string>
    <string name="thumbnail_comic">Thumbnail comic</string>
    <string name="saves">Save to Bookmarks</string>
    <string name="type">Type</string>
    <string name="textType">Type:</string>
    <string name="chapter_info">Chapter</string>
</resources>