<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
         android:padding="8dp"
        android:background="@drawable/card_background">

        <ImageView
            android:id="@+id/ivThumbnail"
            android:contentDescription="@string/thumbnail_comic"
            android:layout_width="fill_parent"
            android:adjustViewBounds="true"
            android:layout_height="100dp"
            android:src="@drawable/shape_background_image"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:text="@string/title"
            android:lines="1"
            android:ems="3"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:textSize="15sp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTextType"
                android:text="@string/textType"
                android:textColor="@color/white"
                android:layout_marginTop="6dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvType"
                android:text="@string/type"
                android:textColor="@color/white"
                android:layout_marginStart="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="12dp"
                />
        </LinearLayout>

</LinearLayout>
