<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/ivThumbnail"
        android:contentDescription="@string/thumbnail_comic"
        android:maxWidth="200dp"
        android:src="@drawable/shape_background_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:lines="2"
            android:ems="3"
            android:ellipsize="end"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:id="@+id/tvTitle"
            android:layout_marginTop="50dp"
            android:text="@string/title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:textSize="15sp"
            android:id="@+id/tvType"
            android:textColor="@color/red_maroon"
            android:layout_marginTop="2dp"
            android:text="@string/type" />

    </LinearLayout>

</RelativeLayout>