<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.InfoFragment">


    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/thumbnail_comic"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivThumbnail"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_placeholder"
        android:ellipsize="end"
        android:layout_marginStart="10dp"
        android:ems="3"
        android:lines="2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivThumbnail" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:id="@+id/tvTextType"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp"
            android:background="@drawable/ic_placeholder"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/ic_placeholder"
            android:layout_marginTop="6dp"
            android:textColor="@color/black"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/icSave"
            android:contentDescription="@string/saves"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:background="@drawable/ic_baseline_bookmark_save"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvTextAuthor"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/linearLayout"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_below="@+id/linearLayout"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/tvTextAuthor"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTextAuthor"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <TextView
        android:id="@+id/tvTextStatus"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:layout_below="@+id/tvTextAuthor"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextAuthor" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAuthor"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tvTextStatus"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvTextStatus"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />


    <TextView
        android:id="@+id/tvTextRating"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTextStatus"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextStatus" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStatus"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/tvTextRating"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toEndOf="@+id/tvTextRating"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />


    <TextView
        android:id="@+id/tvTextGenre"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTextRating"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextRating" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRating"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tvTextGenre"
        android:background="@drawable/ic_placeholder"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@+id/tvTextGenre"
        app:layout_constraintTop_toBottomOf="@+id/tvRating" />


    <TextView
        android:id="@+id/tvTextChapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTextGenre"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/chapter_info"
        android:textColor="@color/red_maroon"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextGenre" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTextChapter"
        android:layout_marginTop="3dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvTextChapter"
        tools:layout_editor_absoluteX="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChapterComic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTextChapter"
            tools:listitem="@layout/item_list_chapter" />
    </LinearLayout>

</RelativeLayout>